Finish time recorder API section
Also:
 - `Mergeable` -> `MergeableValue` across all modules
 - Improvements for immutability guarantees

--- a/doc/bibliography.tex
+++ b/doc/bibliography.tex
@@ -38,4 +38,11 @@
 %  \emph{Design patterns : elements of reusable object-oriented software},
 %  Addison-Wesley,
 %  1994.
+
+  \bibitem{EFM59}
+  Edward Forrest Moore,
+  \emph{The shortest path through a maze},
+  pp. 285–292,
+  Harvard University Press,
+  1959
 \end{thebibliography}
