--- a/doc/requirements-analysis.tex
+++ b/doc/requirements-analysis.tex
@@ -12,6 +12,7 @@ Throughout the document, the input size is always indicated with $n$. An algorit
 For the scope of this dissertation, a round is the execution of the algorithm under test with a given known input. For example, if the algorithm under test is a sorting algorithm, a round is the sorting of a list of known size $n$.
 
 \subsection{Measurement}
+\label{sec:requirementanalysis:definitions:measurement}
 Generally speaking, an algorithm is made up of one of more methods, each one keeping the CPU busy for a certain period of time and usually being called several times. For the scope of this dissertation and unless otherwise stated, a measurement captures information about how much time is spent in a specific method and how many times the method is called for a specific input size $n$.
 
 \subsection{Call tree}
